Fixed Header and Footer overflow in small device

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --fs-xl: clamp(1rem, 2rem + 5vw, 4rem);
+    --fs-xl: clamp(1.5rem, 2rem + 5vw, 4rem);
     --fs-l:  3rem;
-    --fs-40: 2.5rem;
+    --fs-40: clamp(1.25rem, 10vw, 2.5rem);
     --fs-36: 2.25rem;
     --fs-32: 2rem;
     --fs-24: 1.5rem;
@@ -75,14 +75,14 @@ a {
 }
 
 .title h1 {
-    font-size: 2.25rem;
+    font-size: clamp(1.5rem, 5vw ,2.25rem);
 }
 
 .title h2 {
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    font-size: 1.125rem;
+    font-size: clamp(1rem, 4vw, 1.125rem);
 }
 
 .h-title {
@@ -183,6 +183,19 @@ a {
     }
 }
 
+@media(max-width: 330px) {
+    .nav-bar {
+        padding-left: 2%;
+    }
+
+    .title img {
+        display: none;
+    }
+    .title {
+        margin: auto 0;
+    }
+}
+
 @media (max-width: 800px) {
     .navlinks {
         display: none;
@@ -192,6 +205,10 @@ a {
 @media (max-width: 412px) {
     .offcanvas-menu {
         width: 100vw;
+    }
+    .title img {
+        width: 45px;
+        height: 45px;
     }
 }
 
@@ -248,6 +265,7 @@ a {
     width: 100%; 
     max-height: 60vh;
     object-fit: cover;
+    object-position: 50% 40%;
 }
 
 .slides {
@@ -477,13 +495,13 @@ a {
 
 @media (max-width: 375px) {
     .category-container a {
-        width: 90%;
+        min-width: 80%;
     }
 }
 
 @media (max-width: 800px){
     .product-category-header {
-        width: 70%;
+        width: 90%;
     }
 
     .category-container a {
@@ -659,11 +677,11 @@ h2.star-rating {
 
 .f-title {
     margin-top: -3%;
-    margin-left: 1.5%;;
+    margin-left: 1.5%;
 }
 
 .main-title {
-    font-size: 2.5rem;
+    font-size: var(--fs-40);
     font-weight: bold;
 }
 
@@ -721,6 +739,12 @@ h2.star-rating {
     height: 50%;
 }
 
+@media (max-width: 355px) {
+    .f-title h3:first-child {
+        font-size: 1.7rem;
+    }
+}
+
 @media (max-width: 800px) {
     .footer {
         flex-direction: column;
@@ -735,6 +759,10 @@ h2.star-rating {
     }
     .f-title {
         margin-top: 3%;
+        margin-left: 0;
+    }
+    .footer-title {
+        margin-left: 0;
     }
     .quicklinks {
         margin-top: 8%;
@@ -942,6 +970,9 @@ h2.star-rating {
 
 .about-us-featuredimg {
     width: 100vw;
+    min-height: 300px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .about-us-toptext {
@@ -998,5 +1029,19 @@ h2.star-rating {
     font-size: 1rem;
 }
 
+@media (max-width: 800px) {
+    .values-container .values {
+        width: 40%;
+        margin: 0 5%;
+        /* text-align: center; */
+    }
+}
 
+@media (max-width: 800px) {
+    .values-container .values {
+        width: 80%;
+        margin: 0 auto;
+        /* text-align: center; */
+    }
+}
 /* End of About Us CSS */
